AB_ContactUserCreationTrigger_V1.2/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ALIAS__c</fullName>
        <description>ABIQ &amp; Mobility 360 - created by nuvem</description>
        <label>ALIAS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPANYNAME__c</fullName>
        <label>COMPANYNAME</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEFAULTDIVISION__c</fullName>
        <description>ABIQ &amp; Mobility 360 - Created by Nuvem</description>
        <label>DEFAULTDIVISION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAILENCODINGKEY__c</fullName>
        <description>ABIQ &amp; Mobility 360 - created by nuvem</description>
        <label>EMAILENCODINGKEY</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPLOYEE_NUMBER_US__c</fullName>
        <description>ABIQ &amp; Mobility 360 - Created by Nuvem</description>
        <externalId>true</externalId>
        <label>EMPLOYEE NUMBER US</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEDERATIONIDENTIFIER__c</fullName>
        <description>ABIQ &amp; Mobility 360 - Created by Nuvem</description>
        <label>FEDERATIONIDENTIFIER</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISACTIVE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ABIQ &amp; Mobility 360 - Created by Nuvem</description>
        <label>ISACTIVE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LANGUAGELOCALEKEY__c</fullName>
        <description>ABIQ &amp; Mobility 360 - created by nuvem</description>
        <label>LANGUAGELOCALEKEY</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCALESIDKEY__c</fullName>
        <description>ABIQ &amp; Mobility 360 - created by nuvem</description>
        <label>LOCALESIDKEY</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NICKNAME__c</fullName>
        <label>NICKNAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROFILEID__c</fullName>
        <description>ABIQ &amp; Mobility 360 - Created by Nuvem</description>
        <label>PROFILEID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROLEID__c</fullName>
        <description>ABIQ &amp; Mobility 360 - Created by Nuvem</description>
        <label>ROLEID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROUTEKEY__c</fullName>
        <description>ABIQ &amp; Mobility 360 - Created by Nuvem</description>
        <label>ROUTEKEY</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMEZONEIDKEY__c</fullName>
        <description>ABIQ &amp; Mobility 360 - created by nuvem</description>
        <label>TIMEZONEIDKEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USERNAME__c</fullName>
        <description>ABIQ &amp; Mobility - created by nuvem</description>
        <label>USERNAME</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ABIQ &amp; Mobilty 360 - created by nuvem</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Username_Suffix_Global__c</fullName>
        <description>M360 purpose</description>
        <label>Username Suffix Global</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username_Suffix__c</fullName>
        <defaultValue>&apos;.nazuat&apos;</defaultValue>
        <description>This field is used for Contact to User creation trigger. Created by Nuvem.</description>
        <label>Username Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WHOLESALER_NUMBER__c</fullName>
        <description>M 360 purpose</description>
        <label>WHOLESALER NUMBER</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSLRNbrRouteNbr__c</fullName>
        <description>M360 Purpose</description>
        <label>WSLRNbrRouteNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>NAZ_User</fullName>
        <active>true</active>
        <description>ABIQ &amp; Mobility 360 - created by nuvem</description>
        <label>NAZ User</label>
    </recordTypes>
</CustomObject>